actualización del index y Implementacion de idiomas

--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -19,6 +19,14 @@
             <div class="logo">
                 <img src="logo.png" alt="Logo">
             </div>
+            <div class="dropdown-idioma">
+                <img src="idioma1.png" class="idioma" alt="Idioma">
+                <div class="dropdown-content-idioma">
+                    <a href="#">Español</a>
+                    <a href="#">Inglés</a>
+                </div>
+            </div>
+
             <div class="search-bar">
                 <input type="text" placeholder="Buscar productos">
             </div>
@@ -38,7 +46,7 @@
                     </div>
                     <p>Usuario</p>
                     <p>usuario@gmail.com</p>
-                    <button onclick="location.href='../Login y resgistrarse/Login.html'">Cerrar sesión</button>
+                    <button onclick="location.href='login.html'">Cerrar sesión</button>
                 </div>
             </div> 
         </div>
