--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -22,8 +22,8 @@
             <div class="dropdown-idioma">
                 <img src="idioma1.png" class="idioma" alt="Idioma">
                 <div class="dropdown-content-idioma">
-                    <a href="#">Español</a>
-                    <a href="#">Inglés</a>
+                    <a href="index.html">Español</a>
+                    <a href="index2.html">Inglés</a>
                 </div>
             </div>
 
@@ -69,10 +69,15 @@
     <div class="container-menu">
         <div class="cont-menu">
             <nav>
+                
                 <a href="paginaVendedor.html">Crea tu publicación<img src="mas.png" alt="logoText" class="logoText"></a>
-                <a href="#">Buscanos En:</a>
+                <hr>
                 <a href="https://www.facebook.com/profile.php?id=61564965292644">Facebook</a>
                 <a href="https://www.instagram.com/abajova_/">Instagram</a>
+                <a href="#">Youtube</a>
+                <hr>
+                <a href="file:///E:/Proyecto-main/Codigo/Manual%20De%20Usuario%20AbajoVa.pdf" download>Manual de usuario</a>
+                
             </nav>
             <label for="btn-menu">✖️</label>
         </div>
