--- a/Codigo/cart2.html
+++ b/Codigo/cart2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito - AbajoVa</title>
+    <title>Cart - AbajoVa</title>
     <link rel="stylesheet" href="cart.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="cartScript.js" defer></script>
@@ -18,23 +18,25 @@
             
             <div class="logo">
 
-                <a href="index.html"><img src="logo.png" alt="Logo"></a>
+                <a href="index2.html"><img src="logo.png" alt="Logo"></a>
 
             </div>
+
             <div class="dropdown-idioma">
                 <img src="idioma1.png" class="idioma" alt="Idioma">
                 <div class="dropdown-content-idioma">
                     <a href="index.html">Español</a>
                     <a href="index2.html">Inglés</a>
                 </div>
-            </div>
+            </div>      
             <div class="search-bar">
-                <input type="text" placeholder="Buscar productos">
+                <input type="text" placeholder="Search products">
             </div>
-        <div class="menu">
-            <a href="index.html"><button class="boton-nav">Inicio</button></a>
-            <a href="listado.html"><button class="boton-nav">Productos</button></a>
-            <a href="login.html"><button class="boton-nav">Login</button></a>
+            <div class="menu">
+                <a href="index2.html"><button class="boton-nav">Home</button></a>
+                <a href="listado2.html"><button class="boton-nav">Products</button></a>
+                <a href="login2.html"><button class="boton-nav">Login</button></a>
+            </div>
 
         </div>
         <div class="user">
@@ -44,39 +46,38 @@
                     <div class="edit">
                         <button id="ampliar-usuario"><img src="account.png"></button>
                     </div>
-                    <p>Usuario</p>
+                    <p>User</p>
                     <p>usuario@gmail.com</p>
-                    <button onclick="location.href='../Login y resgistrarse/Login.html'">Cerrar sesión</button>
+                    <button onclick="location.href='../Login y resgistrarse/Login.html'">Log out</button>
                 </div>
             </div> 
     </header>
     <main class="home-main">
-        <h2>Carrito de Compras</h2>
-        <button class="boton" onclick="clearCart()">Vaciar Carrito</button>
+        <h2>Shopping Cart</h2>
+        <button class="boton" onclick="clearCart()">Empty Cart</button>
         <div id="cart-container" class="product-grid">
             <!-- Los productos del carrito se insertarán aquí dinámicamente -->
         </div>
         <div id="cart-total-container">
             <p>Total: <span id="cart-total">$0.00</span></p>
         </div>
-        <a href="compra.html"><button type="submit" class="boton2">Aceptar Compra</button></a>
+        <a href="compra.html"><button type="submit" class="boton2">Buy now</button></a>
     </main>
 
     <footer>
-        <p>&copy; 2024 AbajoVa. Todos los derechos reservados.</p>
+        <p>&copy; © 2024 AbajoVa. All rights reserved.</p>
     </footer>
     <div class="capa"></div>
     <div class="container-menu">
         <div class="cont-menu">
             <nav>
-                <a href="paginaVendedor.html">Crea tu publicación<img src="mas.png" alt="logoText" class="logoText"></a>
+                <a href="paginaVendedor.html">Create your listing<img src="mas.png" alt="logoText" class="logoText"></a>
                 <hr>
-                <a href="https://www.facebook.com/profile.php?id=61564965292644">Facebook</a>
-                <a href="https://www.instagram.com/abajova_/">Instagram</a>
+                <a href="#">Suscribirse</a>
+                <a href="#">Facebook</a>
                 <a href="#">Youtube</a>
                 <hr>
                 <a href="file:///E:/Proyecto-main/Codigo/Manual%20De%20Usuario%20AbajoVa.pdf" download>Manual de usuario</a>
-                
             </nav>
             <label for="btn-menu">✖️</label>
         </div>
