--- a/Codigo/listado2.html
+++ b/Codigo/listado2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <title>Products</title>
     <link rel="stylesheet" href="listado.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
@@ -15,23 +15,24 @@
                 <label for="btn-menu" style="color: white; font-size: 24px; cursor: pointer;">☰</label>
             </div>
         <div >
-            <a href="index.html"><img class="logo" src="logo.png" alt="Logo"></a>    
+            <a href="index2.html"><img class="logo" src="logo.png" alt="Logo"></a>    
         </div>
+
         <div class="dropdown-idioma">
             <img src="idioma1.png" class="idioma" alt="Idioma">
             <div class="dropdown-content-idioma">
                 <a href="index.html">Español</a>
                 <a href="index2.html">Inglés</a>
             </div>
-        </div>
+        </div>      
         <div class="search-bar">
-            <input type="text" placeholder="Buscar productos">
+            <input type="text" placeholder="Search products">
         </div>
         <div class="menu">
-            <a href="index.html"><button class="boton-nav">Inicio</button></a>
-            <a href="listado.html"><button class="boton-nav">Productos</button></a>
-            <a href="login.html"><button class="boton-nav">Login</button></a>
-            <a href="cart.html"><span class="material-symbols-outlined">shopping_cart</span></a>
+            <a href="index2.html"><button class="boton-nav">Home</button></a>
+            <a href="listado2.html"><button class="boton-nav">Products</button></a>
+            <a href="login2.html"><button class="boton-nav">Login</button></a>
+            <a href="cart2.html"><span class="material-symbols-outlined">shopping_cart</span></a>
         </div>
         <div class="user">
             <div class="dropdown2">
@@ -40,9 +41,9 @@
                     <div class="edit">
                         <button id="ampliar-usuario"><img src="account.png"></button>
                     </div>
-                    <p>Usuario</p>
+                    <p>User</p>
                     <p>usuario@gmail.com</p>
-                    <button onclick="location.href='../Login y resgistrarse/Login.html'">Cerrar sesión</button>
+                    <button onclick="location.href='../Login y resgistrarse/Login.html'">Log out</button>
                 </div>
             </div> 
     </header>
@@ -50,24 +51,17 @@
         <aside>
             <nav>
                 <div class="filtros">
-                    <h2>Filtrar por Categoría</h2>
+                    <h2>Filter by Category</h2>
                     <ul class="category_item">
-                        <li><a href="#" class="filter" category="merceria">Mercería</a></li>
-
-                        <li><a href="#" class="filter" category="agro">Agro</a></li>
-
-                        <li><a href="#" class="filter" category="alimentos">Alimentos y Bebidas</a></li>
-
-                        <li><a href="#" class="filter" category="autopartes">Autopartes</a></li>
-
-                        <li><a href="#" class="filter" category="tecnologia">Tecnología</a></li>
-
-                        <li><a href="#" class="filter" category="muebles">Muebles</a></li>
-
-                        <li><a href="#" class="filter" category="herramientas">Herramientas y Materiales</a></li>
-
-                        <li><a href="#" class="filter" category="salud">Salud y Equipamiento Médico</a></li>
-                </div>  
+                        <li><a href="#" class="filter" category="merceria">Sewing Supplies</a></li>
+                        <li><a href="#" class="filter" category="agro">Agriculture</a></li>
+                        <li><a href="#" class="filter" category="alimentos">Food and Beverages</a></li>
+                        <li><a href="#" class="filter" category="autopartes">Auto Parts</a></li>
+                        <li><a href="#" class="filter" category="tecnologia">Technology</a></li>
+                        <li><a href="#" class="filter" category="muebles">Furniture</a></li>
+                        <li><a href="#" class="filter" category="herramientas">Tools and Materials</a></li>
+                        <li><a href="#" class="filter" category="salud">SHealth and Medical Equipment</a></li>
+                </div>
             </nav>
         </aside>
         <section id="productos">
@@ -81,14 +75,13 @@
     <div class="container-menu">
         <div class="cont-menu">
             <nav>
-                <a href="paginaVendedor.html">Crea tu publicación<img src="mas.png" alt="logoText" class="logoText"></a>
+                <a href="paginaVendedor.html">Create your listing<img src="mas.png" alt="logoText" class="logoText"></a>
                 <hr>
-                <a href="https://www.facebook.com/profile.php?id=61564965292644">Facebook</a>
-                <a href="https://www.instagram.com/abajova_/">Instagram</a>
+                <a href="#">Suscribirse</a>
+                <a href="#">Facebook</a>
                 <a href="#">Youtube</a>
                 <hr>
                 <a href="file:///E:/Proyecto-main/Codigo/Manual%20De%20Usuario%20AbajoVa.pdf" download>Manual de usuario</a>
-                
             </nav>
             <label for="btn-menu">✖️</label>
         </div>
