--- a/Codigo/compra.html
+++ b/Codigo/compra.html
@@ -14,7 +14,7 @@
             
         </div>
 
-        <form id="checkout-form">
+        <form onsubmit="redirect()" id="checkout-form">
             <label for="nomYape">Nombre y Apellido:</label>
             <input type="text" id="nomYape" required>
             <label for="Telefono">Telefono:</label>
