--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -76,7 +76,7 @@
                 <a href="https://www.instagram.com/abajova_/">Instagram</a>
                 <a href="#">Youtube</a>
                 <hr>
-                <a href="file:///E:/Proyecto-main/Codigo/Manual%20De%20Usuario%20AbajoVa.pdf" download>Manual de usuario</a>
+                <a href="/Manual De Usuario AbajoVa (2).pdf" download>Manual de usuario</a>
                 
             </nav>
             <label for="btn-menu">✖️</label>
