--- a/Codigo/index2.html
+++ b/Codigo/index2.html
@@ -73,7 +73,7 @@
     <a href="#">Facebook</a>
     <a href="#">Youtube</a>
     <hr>
-    <a href="file:///E:/Proyecto-main/Codigo/Manual%20De%20Usuario%20AbajoVa.pdf" download>Manual de usuario</a>
+    <a href="/Manual De Usuario AbajoVa (2).pdf" download>User Manual</a>
 </nav>
 <label for="btn-menu">✖️</label>
 </div>
