--- a/Codigo/listado.html
+++ b/Codigo/listado.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="search-bar">
-            <input type="text" placeholder="Buscar productos">
+            <input type="text" id="searchBar" placeholder="Buscar productos...">
         </div>
         <div class="menu">
             <a href="index.html"><button class="boton-nav">Inicio</button></a>
