--- a/Codigo/listado2.html
+++ b/Codigo/listado2.html
@@ -21,8 +21,8 @@
         <div class="dropdown-idioma">
             <img src="idioma1.png" class="idioma" alt="Idioma">
             <div class="dropdown-content-idioma">
-                <a href="index.html">Español</a>
-                <a href="index2.html">Inglés</a>
+                <a href="listado.html">Español</a>
+                <a href="listado2.html">Inglés</a>
             </div>
         </div>      
         <div class="search-bar">
