--- a/Codigo/cart.html
+++ b/Codigo/cart.html
@@ -6,7 +6,7 @@
     <title>Carrito - AbajoVa</title>
     <link rel="stylesheet" href="cart.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <script src="cartScript.js" defer></script>
+    <script src="cartScript.js"></script>
 </head>
 <body>
     <input type="checkbox" id="btn-menu" style="display: none;">
@@ -21,13 +21,7 @@
                 <a href="index.html"><img src="logo.png" alt="Logo"></a>
 
             </div>
-            <div class="dropdown-idioma">
-                <img src="idioma1.png" class="idioma" alt="Idioma">
-                <div class="dropdown-content-idioma">
-                    <a href="index.html">Español</a>
-                    <a href="index2.html">Inglés</a>
-                </div>
-            </div>
+
             <div class="search-bar">
                 <input type="text" placeholder="Buscar productos">
             </div>
@@ -69,18 +63,16 @@
     <div class="container-menu">
         <div class="cont-menu">
             <nav>
-                <a href="paginaVendedor.html">Crea tu publicación<img src="mas.png" alt="logoText" class="logoText"></a>
-                <hr>
-                <a href="https://www.facebook.com/profile.php?id=61564965292644">Facebook</a>
-                <a href="https://www.instagram.com/abajova_/">Instagram</a>
+                <a href="#">Portafolio</a>
+                <a href="#">Servicios</a>
+                <a href="#">Suscribirse</a>
+                <a href="#">Facebook</a>
                 <a href="#">Youtube</a>
-                <hr>
-                <a href="file:///E:/Proyecto-main/Codigo/Manual%20De%20Usuario%20AbajoVa.pdf" download>Manual de usuario</a>
-                
+                <a href="paginaVendedor.html">Crea tu publicación<img src="mas.png" alt="logoText" class="logoText"></a>
             </nav>
             <label for="btn-menu">✖️</label>
         </div>
     </div>
-    <script src="cartScript.js" defer></script>
+    <script src="cartScript.js"></script>
 </body>
 </html>
